test/expected/explain_rrr-2.out
explain int& &&r
           ^
12: error: rvalue reference is not supported in C
